Enabled decompression fallback

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/thud-game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/thud-game.data.gz",
-        frameworkUrl: buildUrl + "/thud-game.framework.js.gz",
-        codeUrl: buildUrl + "/thud-game.wasm.gz",
+        dataUrl: buildUrl + "/thud-game.data.unityweb",
+        frameworkUrl: buildUrl + "/thud-game.framework.js.unityweb",
+        codeUrl: buildUrl + "/thud-game.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "THUD",
